# APA

./: .gitignore  08-08-2025-08-58-PM.txt  CLAUDE.md  README.md  main.py  prompts.txt  pyproject.toml  requirements.txt  run-apa.sh
apa/: __init__.py  config.py  configuration-template.toml  configuration.for-r1.toml  configuration.qwen3-235b-a22b-thinking-2507.toml  configuration.toml  configuration_thinking_models.toml  system_prompt.toml
apa/application/: CLAUDE.md  __init__.py  prompt_processor.py  response_handler.py
apa/domain/: CLAUDE.md  exceptions.py  interfaces.py  models.py
apa/infrastructure/: CLAUDE.md  llm_client.py
apa/infrastructure/config/: __init__.py  config_loader.py  config_validator.py
apa/infrastructure/io/: CLAUDE.md  __init__.py  file_writer.py
apa/infrastructure/llm/: CLAUDE.md  llm_client.py  model_capabilities.py
apa/infrastructure/ui/: CLAUDE.md  __init__.py  console_loading_indicator.py
apa/services/: __init__.py
