[project]
name        = "apa"
version     = "0.3.3"
description = "Async Prompt Application powered by LiteLLM"
authors     = [{ name = "Kenny Dizi", email = "chitrung09t2@gmail.com" }]
dependencies = [
    "litellm[proxy]==1.75.2",
    "tiktoken==0.10.0",
    "tenacity==9.1.2",
    "anthropic==0.62.0",
    "tomli==2.2.1",
    "jiter==0.10.0",
    "pydantic==2.11.7",
    "typing-extensions==4.14.1",
    "openai==1.99.3",
    "setuptools==80.9.0",
]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
apa = "main:main"
